[package]
name = "postludium"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
description = "Postludium Engine: High-configurable Game Engine on Interlude"

[dependencies]
lazy_static = "0.2.1"
log = "0.3.6"
itertools = "0.5.2"

# child crates
parsetools = { path = "parsetools" }
devconf = { path = "devconf" }
interlude = { git = "https://github.com/Pctg-x8/interlude" }
