[package]
name = "devconf"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
description = "Postludium Device Configuration"

[dependencies]
lazy_static = "0.2.2"
parsetools = { path = "../parsetools" }
interlude-vkdefs = { git = "https://github.com/Pctg-x8/interlude_vkdefs.git" }

[dev-dependencies]
itertools = "0.5.9"
